--- a/style.css
+++ b/style.css
@@ -1,4 +1,214 @@
-.body{
-    margin: 0px;
+body{
+    margin: 0px auto;
     padding: 0px;
+}
+.top-banner{
+    width: 100%;
+    height: 500px;
+    background-image: url(images/donation1.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.all-text{
+    text-align: center;
+    padding: 170px;
+}
+.link-button{
+    background-color: tomato;
+    color: white;
+    font-style: inherit;
+    padding: 10px;
+    border-radius: 5px;
+}
+#slogan1{
+    font-size: 40px;
+    color: rgb(255, 255, 255);
+    margin: 0px;
+}
+#slogan2{
+    font-size: 40px;
+    color: white;
+    margin: 0px;
+}
+.top-paragraph{
+    text-align: center;
+    color: white;
+    padding-bottom: 20px;
+}
+a{
+    text-decoration: none;
+}
+.donate-section{
+    width: 80%;
+    height: 400px;
+    margin: 0 auto;
+}
+.donate {
+    text-decoration: none;
+    text-align: center;
+    font-size: 50px;
+    margin-bottom: 15px;
+    margin-top: 100px;
+    
+
+}
+.donate-p{
+    text-align: center;
+    width: 500px;
+    margin: 0 auto;
+}
+.donate-case{
+    width: 63%;
+    margin-left: 200px;
+
+}
+.donate-amount{
+    width: 100px;
+    height: 70px;
+    font-size: 30px;
+    margin: 10px;
+    float: left;
+    margin-top: 30px;
+    padding-top: 35px;
+    text-align: center;
+    background-color: rgb(237, 233, 233);
+    border-radius: 5px;
+}
+#taka{
+    border: 2px solid red;
+    color: tomato;
+    background-color:  rgb(248, 222, 218);
+}
+.input-section{
+    clear: left;
+   }
+#other-amount{
+    margin-top: 60px;
+    border: none;
+    width: 100%;
+    text-align: center;
+}
+#donate-now{
+    border: none;
+    margin-left: 450px;
+}
+hr{
+    width: 70%;
+}
+.card-section{
+    margin-left: 50px;
+}
+.plan{
+    font-size: 50px;
+    color: rgb(2, 2, 2);
+    margin: 0px;
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 20px;
+}
+.card{
+    width: 335px;
+    height: 300px;
+    background: gray;
+    float: left;
+    margin: 10px;
+    border-radius: 5px;
+    padding-top: 50px;
+    padding-left: 20px;
+    margin-top:40px;
+}
+.card h3{
+    font-size: 30px;
+}
+.card p{
+    padding-right: 30px;
+}
+#card-1{
+    background-color: lightblue;
+}
+#card-2{
+    background-color: rgb(230, 182, 173);
+}
+#card-3{
+    background-color: rgb(242, 240, 189);
+}
+.live{
+    clear: left;
+    margin-left: 100px;
+}
+.half-width{
+    width: 40%;
+    height: 400px;
+    float: left;
+    margin-top: 80px;
+    margin-bottom:0px;
+}
+.half-width img{
+    width: 80%;
+    height: 100%;
+    margin-left: 50px;
+    border-radius: 5px;
+}
+.half-width h1{
+    font-size: 50px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+.updates{
+    clear: left;
+    padding-top: 50px;
+}
+.updates h1{
+    font-size: 50px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+.updates p{
+    margin: 0 auto;
+    text-align: center;
+    width: 400px;
+    height: auto;
+}
+.form{
+    width: 700px;
+    background-color: rgb(234, 213, 184);
+    text-align: center;
+    height: 150px;
+    margin-left: 250px;
+    margin-top: 30px;
+    padding: 20px;
+}
+.form input{
+    margin-top: 60px;
+    height: 25px;
+    border: none;
+    border-radius: 5px 0px 0px 5px;
+}
+.form button{
+    margin-top: 60px;
+    height: 25px;
+    border: none;
+    margin-left: -5px;
+    background-color: tomato;
+    border-radius: 0px 5px 5px 0px;
+}
+.footer{
+    width: 100%;
+    height: 150px;
+    background-color: black;
+
+}
+.footer h2{
+    font-size: 30px;
+    color: tomato;
+    text-align: center;
+    padding-top: 30px;
+}
+.footer p{
+    text-align:center;
+    color: white;
+}
+.text h1{
+    margin-top: 60px;
 }
