--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     margin: 0px auto;
     padding: 0px;
+    font-family: 'Poppins', sans-serif;
 }
 .top-banner{
     width: 100%;
@@ -55,7 +56,7 @@ a{
 }
 .donate-p{
     text-align: center;
-    width: 500px;
+    width: 600px;
     margin: 0 auto;
 }
 .donate-case{
@@ -167,7 +168,7 @@ hr{
 .updates p{
     margin: 0 auto;
     text-align: center;
-    width: 400px;
+    width: 600px;
     height: auto;
 }
 .form{
