--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ hr{
     width: 100%;
     height: 150px;
     background-color: black;
-
+    margin-top: 80px;
 }
 .footer h2{
     font-size: 30px;
